
1.0.0 () -

- TD-49   Log when file management fails
          (thanks to Ben Boeckel).
- TD-115  Throw error when config file is missing or not readable
          (thanks to Jelle van der Waa).
- TI-2    Two line tags causes false entry in database
          (thanks to Sebastian Uharek).
- TI-4    The 'timew' command considers only the last interval
          (thanks to Tomas Babej).
- TI-5    Unicode tags not working.
          (thanks to Sergey Trofimov).
- Added 'continue' command.
- Added 'diagnostics' command.
- Added 'export' command.
- Added 'extensions' command.
- Added 'help' command.
- Added 'start' command.
- Added 'stop' command.
- Added 'tags' command.
- Integrated libshared.git.
- Colored tags supported.
- Added Taskwarrior hook script to integrate Timewarrior.
- Added support for the ':debug' and :quiet hints.
- Added support for the :day, :week, :month, :quarter and :year hints.
- Added 'track' command.
- Added 'cancel' command.
- Added 'config' command.
- Added 'tag' command.
- Added 'untag' command.
- Added 'shorten' command.

Design completed 2016-03-13
Project started  2015-11-29

------ current release ---------------------------
------ start -----------------------------------